修订一些打字错误。

--- a/tex/body/M01.01-Time.tex
+++ b/tex/body/M01.01-Time.tex
@@ -8,7 +8,7 @@
 找到恰当的答案。其实，这是两个很难的问题。尽管有不少关于
 时间和空间的定义，但大都不能令人满意。一种或许可以接受的
 说法是：时间、空间是物理事件之间的一种次序，时间用以表述
-事物之同的顺序，空间用以表述事件相互之间的位形。
+事物之简的顺序，空间用以表述事件相互之间的位形。
 
 没有满意的“严格”的理论定义，并不妨碍时间和空间二者
 在物理中的使用。因为，物理学是一门基于实验的科学，在考查
