--- a/tex/body/M01.03-Length.tex
+++ b/tex/body/M01.03-Length.tex
@@ -17,7 +17,7 @@
 定米的大小。1960年以后，改用光的波长作为标准。在第十一届
 国际计量大会上，正式通过的“米”的定义是l米等于$^{86}$Kr原子
 \clearpage\noindent
-的$2\rm{p}_{10}$和$5\rm{d}_5$
+的$2\rm{p}^{10}$和$5\rm{d}^5$ % \errnote{$5\rm{d}^5$}{原文误作“$6\rm{d}_5$”。}
 能级之间跃迁时所对应的辐射在真空中的波长$\lambda$的1,650,763.73倍，即
 \begin{equation*}
   1 \text{米} = 1,650,763.73 \, \lambda
