--- a/tex/body/M01.07-Velocity Of Curvilinear Motion.tex
+++ b/tex/body/M01.07-Velocity Of Curvilinear Motion.tex
@@ -2,7 +2,7 @@
 
 \ziju{-0.02}我们现在来推广上节关于直线运动的速度的概念。按图1.11，
 质点作曲线运动，在时刻$t_1$，质点位置矢量为$\vec{r}\left(t_1\right)$，在时刻$t_2$，
-位置矢量为$\vec{r}\left(t_2\right)$，则定义在$t_1$到$t_1$间隔中质点A的平均速度为\ziju{0}
+位置矢量为$\vec{r}\left(t_2\right)$，则定义在$t_1$到$t_1$间隔中质点$ A $的平均速度为
 \begin{equation}\label{eqn:01.07.01}
   \langle \vec{v} \rangle_{t_1\rightarrow t_2}=\frac{\vec{r}\left(t_2\right)-\vec{r}\left(t_1\right)}{t_2-t_1}=\frac{\Delta \vec{r}}{\Delta t}
 \end{equation}
@@ -18,7 +18,7 @@ $\vec{r}\left(t\right)$。在\eqref{eqn:01.07.01}~中，$\Delta t=t_2-t_1$，$\D
   \label{fig:01.11}
 \end{wrapfigure}
 中质点位置矢量的改变量，称为位移矢量。这个平均速度的定义表明，平均速度是矢量。根据矢量运算
-规则，式\eqref{eqn:01.07.01}~所定义的$\langle \vec{v}\rangle t_1-t_2$是在l到2的方向(图\ref{fig:01.11})。
+规则，式\eqref{eqn:01.07.01}~所定义的$\langle \vec{v}\rangle_{t_1-t_2}$是在l到2的方向(图\ref{fig:01.11})。
 另一方面，由图\ref{fig:01.11}~很清楚知道，在$t_1$到$t_2$时间内质点$A$的运
 动方向并非总是沿着l到2的方向的，而是先从1向3方向运动，
 然后从3向2方向运动，这些运动方向并不平行于1到2的方向。
