--- a/tex/body/M01.08-Acceleration.tex
+++ b/tex/body/M01.08-Acceleration.tex
@@ -20,10 +20,13 @@
 这个结果中不含$t$和$\Delta t$，也就是说，对任何一段时间间隔，自由落
 体的平均加速度都是一样的。这种加速度不随时间变化的运动，
 称为匀加速运动。自由落体运动是一个典型的匀加速运动。无论
-用何种材料作成的物体，它的自由落体加速度总等于9.8~$\text{米/秒}^2$。
+用何种材料作成的物体，它的自由落体加速度总等于$9.8\text{米/秒}^2$。
 称此加速度为重力加速度，用$g$表示。
 
 精确测量表明，在地球各处，重力加速度$g$并不都一样，一
+
+\mbox{}
+
 \begin{table}[h]
   \caption{地球上不同地点的$g$值}
   \label{tab:01.06}
