--- a/tex/body/M01.09-Circular Motion And Angular Velocity.tex
+++ b/tex/body/M01.09-Circular Motion And Angular Velocity.tex
@@ -2,7 +2,7 @@
 
 现在来讨论一种最简单的曲线运动——圆周运动。即轨迹是
 个圆。如果选择圆心作为坐标原点，质点的位置就可用位置矢量
-$\vec{r}$与某一选定的方向(例如$X$轴)之间的夹角$\varphi$(图\ref{fig:01.17})来描述，因
+$\vec{r}$与某一选定的方向（例如$X$轴）之间的夹角$\varphi$（图\ref{fig:01.17}）来描述，因
 为$\varphi$确定之后，质点的位置就完全确定了。因而可用角$\varphi$与$t$的
 关系$\varphi\left(t\right)$来代替函数$\vec{r}\left(t\right)$。
 
