--- a/tex/body/M01.10-Uniform Circular Motion.tex
+++ b/tex/body/M01.10-Uniform Circular Motion.tex
@@ -9,7 +9,7 @@
 \end{equation}
 T为周期，比较式\eqref{eqn:01.10.01}、\eqref{eqn:01.09.03}，得到：
 \begin{equation}\label{eqn:01.10.02}
-  \omega=\frac{2 \uppi}{T}, ~ T=\frac{2 \uppi}{\omega}
+  \omega=\frac{2 \uppi}{T}, \quad T=\frac{2 \uppi}{\omega}
 \end{equation}
 这也就是说，周期$T$等于质点转过$2\uppi$角度所需要的时间。
 
