--- a/tex/body/M13.00-Answers.tex
+++ b/tex/body/M13.00-Answers.tex
@@ -1,9 +1,7 @@
 \clearpage
 \pagestyle{plain}
 \refstepcounter{chapter}
-\begin{center}
-  \zihao{-3}\textbf{全部习题答案}
-\end{center}
+\chapter*{全部习题答案}
 \addcontentsline{toc}{chapter}{全部习题答案}
 \setlength{\mathindent}{4em}
 \setcounter{chapter}{0}
