--- a/tex/body/M00.00-Introduction.tex
+++ b/tex/body/M00.00-Introduction.tex
@@ -1,5 +1,5 @@
-\ctexset{chapter={number={\quad},name={绪,论}}}
-\chapter{—— ~ 物理世界的统一}\label{chp:0}
+\ctexset{chapter={number={\symbol{"3000}},name={绪,论}}}
+\chapter[物理世界的统一]{—— ~ 物理世界的统一}\label{chp:0}
 \ctexset{chapter={number={\chinese{chapter}},name={第,章}}}
 
 物理学的兴起，是从经典力学开始的。在经典力学之前，人类
@@ -108,7 +108,7 @@
 
 到六十年代末，我们已经得到了如下的物理世界的图象。宇
 宙中的所有物理对象可以分成两大类，一类称为“物质”，如夸
-克、电子、$\mu$子等等，另一类称为“相互作用”，如引力、电磁力
+克、电子、\mu $\mu$子等等，另一类称为“相互作用”，如引力、电磁力
 等等。在目前的宇宙中，有四种基本的相互作用，按它们的强度
 顺序排列是：核子参与的强相互作用，荷电粒子参与的电磁相互
 作用，核子及电子、中微子参与的弱相互作用，以及任何粒子都
