--- a/tex/body/M00.00-Introduction.tex
+++ b/tex/body/M00.00-Introduction.tex
@@ -94,7 +94,7 @@
 引力理论——广义相对论。
 
 作为引力理论的广义相对论和作为电磁理论的麦克斯韦理论
-构成了我们今夭称为经典物理学的理论基础。
+构成了我们今天称为经典物理学的理论基础。
 
 与经典物理相对的是量子论。量子力学最初是作为原子、分
 子的统一的力学而发展起来的。这种新的力学统一地解释了原子、
