修正第十一章中的扫描错误

--- a/tex/body/M11.01-Pragmatic Inertial Reference Frame.tex
+++ b/tex/body/M11.01-Pragmatic Inertial Reference Frame.tex
@@ -68,7 +68,7 @@
 现在已在研究比FK4更好的惯性系。一种方案是利用一系列
 射电源作为基准。射电源是目前观测到的最远的天体系统，因此，
 以射电源为基准将涉及更大的范围，可能比FK4更准确。另一种
-方案是利用微波背景辐射，这种辐射是均匀地猕漫在整个宇宙中
+方案是利用微波背景辐射，这种辐射是均匀地㳽漫在整个宇宙中
 的。如果一个物体相对于背景辐射静止，那么，它将看到从不同
 方向射来的背景辐射强度都相同，即所谓各向同性的，我们就可
 以定义这种相对背景辐射为静止或匀速运动的体系为惯性系的基
