--- a/tex/body/M11.02-Principle of Relativity.tex
+++ b/tex/body/M11.02-Principle of Relativity.tex
@@ -87,11 +87,11 @@ $ K $及$ K' $系之间的时空遵从伽利略变换关系，即
 \end{equation}
 % 322.jpg
 \begin{equation*}
-  t ^ { \prime } = t + t _t { 0 }
+  t ^ { \prime } = t + t _ { 0 }
 \end{equation*}
 其中各量的物理意义已在第二章第五节中讨论过，由此容易推出
 \begin{equation*}
-  \frac { \dif ^ { 2 } r ^ { \prime } } { \dif t ^ { \prime 2 } } = \frac { \dif ^ { 2 } \vec{r} } { \dif t ^ { 2 } }
+  \frac { \dif ^ { 2 } \vec{r} ^ { \prime } } { \dif t ^ { \prime 2 } } = \frac { \dif ^ { 2 } \vec{r} } { \dif t ^ { 2 } }
 \end{equation*}
 这个式子表示，一个物体相对于$ K $系的加速度与相对$ K' $系的是一
 样的，即
