--- a/tex/body/M11.04-Lorentz Transform.tex
+++ b/tex/body/M11.04-Lorentz Transform.tex
@@ -123,10 +123,10 @@
 或
 \begin{equation}\label{eqn:11.04.10}
   \begin{cases}
-    x = \dfrac { x ^ { \prime } - v t ^ { \prime } } { \sqrt { 1 - v ^ 2 / c ^ 2 } } \\
+    x = \dfrac { x ^ { \prime } + v t ^ { \prime } } { \sqrt { 1 - v ^ 2 / c ^ 2 } } \\
     y = y ^ { \prime }                                                               \\
     z = z ^ { \prime }                                                               \\
-    t = \dfrac { t ^ { \prime } - \dfrac v { c ^ 2 } x ^ { \prime } } { \sqrt { 1 - v ^ 2 / c ^ 2 } }
+    t = \dfrac { t ^ { \prime } + \dfrac v { c ^ 2 } x ^ { \prime } } { \sqrt { 1 - v ^ 2 / c ^ 2 } }
   \end{cases}
 \end{equation}
 式\eqref{eqn:11.04.09}或\eqref{eqn:11.04.10}称为\CJKunderdot{洛伦兹}变换。
@@ -134,7 +134,7 @@
 当速度$ v \ll c $即$ \dfrac { v ^ { 2 } } { c ^ { 2 } } \ll 1 $时，如果忽略掉
 $ \beta ^ { 2 } = \left( \dfrac { v } { c } \right) ^ { 2 } $
 以上的各级
-小量，式\eqref{eqn:11.04.09}就过渡为伽利略变换式\eqref{eqn:11.02.02}了。这表明，
+小量，式\eqref{eqn:11.04.09}就过渡为伽利略变换\lhbrak 式\eqref{eqn:11.02.02}\rhbrak 了。这表明，
 在牛顿力学中所采用的时空坐标变换是只适用于低速情况的，在
 高速情况它不正确。
 
