--- a/tex/body/M11.05-Space-Time Idea of Relativity.tex
+++ b/tex/body/M11.05-Space-Time Idea of Relativity.tex
@@ -566,4 +566,4 @@ $ t ^ { \prime } $轴是
 接近光的速度逃离地球时，他将看到地球就在他的航向的前侧
 方；当$ A $以接近光的速度逃离太阳时，太阳也就在他的航向的前
 侧方。无论他向什么方向逃，他要离开的地方总是在他的前方
-其实，他看见的只不过是相对论的“海市蜃楼”
+其实，他看见的只不过是相对论的“海市蜃楼”。
