修正第十二章中的扫描错误

--- a/tex/body/M12.03-Criticism of Absolute Space-Time.tex
+++ b/tex/body/M12.03-Criticism of Absolute Space-Time.tex
@@ -40,10 +40,10 @@
   对静止时达到其最大数量为止……”
 \end{quoting}
 
-这就是说，至少对于转动，我们可以利用水面变四平来
+这就是说，至少对于转动，我们可以利用水面变凹平来
 区分哪些转动是绝对的，哪些则不是。只当水面变凹时，才
-表明它相对于绝对空间有转动反之，当水面为平坦时，它
-就没有绝对的转动(图\ref{fig:12.11})这就是牛顿给绝对空间所规
+表明它相对于绝对空间有转动；反之，当水面为平坦时，它
+就没有绝对的转动(图\ref{fig:12.11})。这就是牛顿给绝对空间所规
 定的实验判别法。狭义相对论的时空观虽然与牛顿的时空观
 有许多根本性的不同，但在加速度具有绝对性这一点上，两
 种体系是相同的。
@@ -62,7 +62,7 @@
 力的批评是马赫给出的。马赫在《发展中的力学》一书中写
 道：
 \begin{quoting}
-  “如果我们说一个物体$ K $只能由于另一物体K的作用
+  “如果我们说一个物体$ K $只能由于另一物体$ K' $的作用
   而改变它的方向和速度，那么，当我们用以判断物体K的运
   动的其他物体$ A,B,C,\dots $都不存在的时候，我们就根本得
   不到这样的认识，因此，我们实际上只认识到物体同$ A,B,
@@ -151,7 +151,7 @@
 “绝对加速度不可测”。正是由于这一点，引力相当于某种惯性
 力，或者说，引力具有惯性力的性质。而惯性力在牛顿意义下是
 一种完全由时空决定的力，即具有几何性。所以，引力具有几何
-性。爱因斯坦从这种观点出发，导出新的引力理论一广义相对
+性。爱因斯坦从这种观点出发，导出新的引力理论——广义相对
 论。它预言了牛顿引力理论中所没有的一些新现象。事实证明，
 爱因斯坦的引力理论是正确的，而牛顿的引力理论则不正确。
 
