--- a/tex/body/M12.04-Equivalence Principle.tex
+++ b/tex/body/M12.04-Equivalence Principle.tex
@@ -7,14 +7,14 @@
 
 首先，假定在某一空间范围中有恒定的引力，即各处的引力
 % 369.jpg
-加速度都是$ g $。例如，在地球表面附近，就近似属于这种情况。
+加速度都是$ \vec{g} $。例如，在地球表面附近，就近似属于这种情况。
 如果只有引力，那么，根据式\eqref{eqn:04.06.07}
 \begin{equation*}
   \frac { m _ \text{惯} } { m _ \text{引} } = \text{普适常数} = 1
 \end{equation*}
 所有物体在这个区域中的加速度都完全相同。因此，只要变换到
 一个新的参考系$ K' $，$ K' $相对于$ K $系(即原来地球表面附近)的加
-速度为$ g $，则一切引力效应都被消除了。任何上述物体的运动都
+速度为$ \vec{g} $，则一切引力效应都被消除了。任何上述物体的运动都
 没有加速度了。
 
 很容易用公式来表达。在参考系$ K $中，牛顿定律是
