修正361页图片位置

--- a/tex/body/M12.04-Equivalence Principle.tex
+++ b/tex/body/M12.04-Equivalence Principle.tex
@@ -9,9 +9,11 @@
 % 369.jpg
 加速度都是$ g $。例如，在地球表面附近，就近似属于这种情况。
 如果只有引力，那么，根据式\eqref{eqn:04.06.07}
+
 \begin{equation*}
   \frac { m _ \text{惯} } { m _ \text{引} } = \text{普适常数} = 1
 \end{equation*}
+
 所有物体在这个区域中的加速度都完全相同。因此，只要变换到
 一个新的参考系$ K' $，$ K' $相对于$ K $系(即原来地球表面附近)的加
 速度为$ g $，则一切引力效应都被消除了。任何上述物体的运动都
@@ -47,19 +49,21 @@ $ \vec{a} ^ { \prime } = \vec{a} - \vec{g} $，而其他作用力同前，故有
 就是通常所说的\CJKunderdot{等效原理}，它是有关引力的最基本的原理。
 
 等效原理说明引力具有几何性，或“虚拟”性，它的存在与
+否，决定于参考系的选择。这种性质，物
+理学中其他的力并不具有。例
 % 370.jpg
-\begin{wrapfigure}[16]{r}{9.5em}
+\begin{wrapfigure}[16]{r}{10em}
   \centering
   \includegraphics{figure/fig12.13}
   \caption{引力的非均匀性}
   \label{fig:12.13}
 \end{wrapfigure}
-否，决定于参考系的选择。这种性质，物
-理学中其他的力并不具有。例如，我们不
+如，我们不
 可能依靠选择参考系而把电磁作用全部消
 受掉。引力作用下质点运动的几何性，我
 们曾专门在第四章中讨论过(见第四章第
 六节)。
+
 
 在上述的讨论中，我们一再使用“局
 部范围”一词。这是因为，实际的引力不
