--- a/tex/body/M12.05-Local Inertial Frame.tex
+++ b/tex/body/M12.05-Local Inertial Frame.tex
@@ -6,6 +6,7 @@
 应是一个惯性系。它被称为局部惯性系。
 
 % 371.jpg
+\clearpage
 在牛顿力学中，用惯性定律来判断一个参考系是不是惯性
 系，即在没有外力的环境中，质点应保持惯性运动。但是，由于
 引力是不可屏蔽的，它无处不在。所谓“没有外力的环境”实质
@@ -39,6 +40,7 @@
 是有加速度的。
 
 % 372.jpg
+\clearpage
 总之，引力的作用使大范围的惯性系不再存在，只能有局部
 的惯性系。引力的作用就在于决定各个局部惯性系之间的联系。
 在任何一个局部惯性系中，我们是看不到引力作用的，只能在各
