--- a/tex/outline-of-mechanics.cls
+++ b/tex/outline-of-mechanics.cls
@@ -345,6 +345,8 @@
   #1%
 }
 
+\usepackage{zhlineskip}
+
 % ----------------------------------------------------------
 % 自定义命令
 % ----------------------------------------------------------
