修正第四章中的扫描错误

--- a/tex/body/M04.01-Kepler's Three Laws Of Planetary Motion.tex
+++ b/tex/body/M04.01-Kepler's Three Laws Of Planetary Motion.tex
@@ -21,7 +21,7 @@
 一个焦点上。这称为轨道定律。
 
 (2)任何行星到太阳的连线在相同的时间内扫过相同的面
-积。这称为面积定律
+积。这称为面积定律。
 % 124.jpg
 
 (3)任何行星绕太阳运动的周期的平方与该行星的椭圆轨道
@@ -32,10 +32,10 @@
 式中，$ T $是行星运动的周期；$ r $是椭圆轨道的半长轴。这称为周期
 定律。
 
-表\ref{tab:04.01}~中给出了九个大行星的有关数据。其中是以AU为
+表\ref{tab:04.01}~中给出了九个大行星的有关数据。其中$ r $是以AU为
 单位的，AU是地球轨道的半长轴，称为天文单位，其值是
 \begin{equation*}
-  1 \symrm{AU} = \num{149.6e8} \text{ 公里}
+  1 \symrm{AU} = \num{149.6e6} \text{ 公里}
 \end{equation*}
 
 图\ref{fig:04.01}~画出了$ \ln T $与$ \ln r $之间的关系。它是一条直线，斜率为
