--- a/tex/body/M04.03-Gravitational Constant G.tex
+++ b/tex/body/M04.03-Gravitational Constant G.tex
@@ -61,7 +61,7 @@
 
 如果天平两边各有质量$ m $，达到平衡。若再将一大质量$ M $放
 在某一$ m $之下，由于引力的作用将破坏这个平衡，必须将另一端
-之$ m $增加为$ m + \delta m $才能保持平衡由$ \delta m $及其他天平参数，即可求
+之$ m $增加为$ m + \delta m $才能保持平衡。由$ \delta m $及其他天平参数，即可求
 出$ G $。
 
 \textsf{2.扭秤周期法}
