--- a/tex/body/M04.04-Unit System And Dimension.tex
+++ b/tex/body/M04.04-Unit System And Dimension.tex
@@ -72,7 +72,7 @@ $ L / T ^ { 2 } = L T ^ { - 2 } $，每个物理量都对应着一个由$ L , M 
 \end{align*}
 
 弧度是根据圆的弧长与其半径之比来定义的，所以它的量纲
-是$ L / L = L ^ { 0 } $，即与$ M , L , T $均无关。这种量，称为无量纲量摩
+是$ L / L = L ^ { 0 } $，即与$ M , L , T $均无关。这种量，称为无量纲量。摩
 擦系数也是一个无量纲量。
 
 最后还应指出，可以不取长度、质量及时间三者为基本量，
