--- a/tex/body/M04.06-Geometry Of Force.tex
+++ b/tex/body/M04.06-Geometry Of Force.tex
@@ -27,7 +27,7 @@
 方程 \eqref{eqn:04.06.02}两边质量的物理含义并不相同。方程左边的质量是牛
 顿第二定律$ F = m a $中的质量，它的意义是力与加速度之比，是物
 体惯性大小的度量，质量越大的物体，速度越难改变，所以称为
-惯性质量。而方程右边的质量是牛顿引力定律$ F = m a / r ^ { 2 } $中的质
+惯性质量。而方程右边的质量是牛顿引力定律$ F = m \alpha / r ^ { 2 } $中的质
 量，它是质点感受外物引力大小的度量，质量越大，感受到外物
 的引力越大，称为引力质量。为清楚起见，我们把式\eqref{eqn:04.06.01}、
 \eqref{eqn:04.06.02}改写为
@@ -117,11 +117,11 @@ E\"otv\"os 用一些不同材料的物体悬在扭秤上做过多次实验，
 性，这就是引力几何性的一个反映。
 
 对于质点运动，我们可以用时-空图来表示，图\ref{fig:04.06}
-是一维运动的时空图。如果已知质点轨道方程为
+是一维运动的时-空图。如果已知质点轨道方程为
 \begin{equation*}
   x = x \left( t \right)
 \end{equation*}
-我们可在时一空图上绘出相应的曲线。从曲线上，可求得在任何时
+我们可在时-空图上绘出相应的曲线。从曲线上，可求得在任何时
 \begin{wrapfigure}[10]{l}{16em}
   \vspace{-1em}
   \centering
