--- a/tex/body/M04.09-Exercises.tex
+++ b/tex/body/M04.09-Exercises.tex
@@ -81,7 +81,7 @@ $ M $。在离球心$ r $处有一质量为$ m $的质点，$ r $的范围为$ 0
 
 \exercise 一人造地球卫星以圆形轨道环绕地球飞行，其周期为$ T =
   90.0 $分钟。已知地球半径为$ R = 6. 3 7 \times 1 0 ^ { 3 } $公里，质量为$ M _ { E } = 5 . 9 8
-  \times 1 0 ^ { 2 7 } $克，万有引力常数为$ G = 6 . 6 7 \times 1 0 ^ { - } 8 $厘米\.$ ^3 $/克$ \cdot $\.$ ^2 $。求卫星离
+  \times 1 0 ^ { 2 7 } $克，万有引力常数为$ G = 6 . 6 7 \times 1 0 ^ { - 8 } $厘米\.$ ^3 $/克$ \cdot $秒\.$ ^2 $。求卫星离
 地面的高度$ h $。
 
 \exercise 同步卫星广泛用于地球范围内的电视转播和通讯。它在
