修正第八章中的扫描错误

--- a/tex/body/M08.01-Conservation of Momentum.tex
+++ b/tex/body/M08.01-Conservation of Momentum.tex
@@ -36,8 +36,8 @@
 孤立体系有些共同的动力学规律，其中之一就是总动量守恒。
 
 我们首先讨论一个最简单的质点系，它只包括两个质点1及
-2(图81)。如果它是孤立体系，那么，作用在质点1上的力，只
-有2对它的作用力$ \vec { F } _ { 2 \to 1 } $而作用在质点2上的力，只有1对它的
+2(图\ref{fig:08.01})。如果它是孤立体系，那么，作用在质点1上的力，只
+有2对它的作用力$ \vec { F } _ { 2 \to 1 } $；而作用在质点2上的力，只有1对它的
 作用力$ \vec { F } _ { 1 \to 2 } $。故根据牛顿第二定律，有
 \begin{equation}\label{eqn:08.01.01}
   \begin{split}
@@ -69,7 +69,7 @@
 \clearpage\noindent
 最终得到\vspace{-1em}
 \begin{equation}\label{eqn:08.01.05}
-  \vec { P } = \text { 不变量 }
+  \vec { P } = \text {不变量}
 \end{equation}
 此式表明，对于两个质点构成的孤立体系，我们找到了一个新的
 不变量$ \vec { P } $，称它为动量。在证明过程中，我们并没有用到作用力
@@ -82,7 +82,7 @@
 \begin{equation}\label{eqn:08.01.06}
   \begin{aligned}
     \vec{P} & = m _ { 1 } \vec { v } _ { 1 } + m _ { 2 } \vec { v } _ { 2 } + \cdots + m _ { n } \vec { v } _ { n } \\
-            & = \text { 不变量 }
+            & = \text {不变量}
   \end{aligned}
 \end{equation}
 \begin{align}\label{eqn:08.01.07}
@@ -120,7 +120,7 @@
 
 (2)动量守恒定律与机械能守恒定律是相互独立的。因此，对
 一个具体的物理过程而言，机械能守恒定律的成立，并不决定动
-量守恒定律成立反过来，动量守恒定律的成立，也不决定机械
+量守恒定律成立；反过来，动量守恒定律的成立，也不决定机械
 能守恒定律成立。譬如，我们可以找到许多能量守恒成立而动量
 守恒不成立的例子。对于行星沿圆轨道绕太阳的运动，若把行星
 作为一个体系，它的能量是守恒的，但是动量并不守恒，因为速
@@ -212,18 +212,17 @@
   \caption{}
   \label{fig:08.03}
 \end{wrapfigure}
-长$ 1 $厘米(\ref{fig:08.03})。开始时重物静止，
+长$ l $厘米(图\ref{fig:08.03})。开始时重物静止，
 将质量为$ m _ 2 $的子弹沿重物能够摆动
 的方向水平地射入重物，$ m _ 1 $与$ m _ 2 $发生
 完全非弹性碰撞，即碰后重物和子弹一起运动，而偏离其平衡位置最大到$ \alpha $
 角。计算子弹在进入重物时的速度$ v $。
 
 \resolve 子弹与$ m _ { 1 } $相碰时，在水平
-
 方向没有外力作用，故以地球为参考系，以$ m _ 1 $，$ m _ 2 $为系统，在
 水平方向系统的动量守恒。此后，子弹与$ m _ 1 $一起以速度$ u $运
 动。由于$ \left( m _ { 1 } + m _ { 2 } \right) $上有重力$ \left( m _ { 1 } + m _ { 2 } \right) g $ 和张力$ T $作用，而张力始
-终与位移方向垂直，不作功，故$ \left( m _ { 1 } + m _ { 2 } \right) $系统的机械能守恒
+终与位移方向垂直，不作功，故$ \left( m _ { 1 } + m _ { 2 } \right) $系统的机械能守恒。
 应用这两个守恒定律，可列出方程
 \begin{equation*}
   \begin{split}
