--- a/tex/body/M08.02-Impulse.tex
+++ b/tex/body/M08.02-Impulse.tex
@@ -54,7 +54,7 @@ $ \displaystyle \int _ { t _ { 1 } } ^ { t _ { 2 } } \vec{F} \dif t $
 \begin{equation*}
   \begin{split}
     & \left( M + \Delta m \right) v \\
-    = & \Delta m \left( v - w \right) + M \left( v - \Delta v \right)
+    = & \Delta m \left( v - w \right) + M \left( v + \Delta v \right)
   \end{split}
 \end{equation*}
 整理后得
@@ -63,7 +63,7 @@ $ \displaystyle \int _ { t _ { 1 } } ^ { t _ { 2 } } \vec{F} \dif t $
 \end{equation}
 两边除以$ \Delta t $后，得
 \begin{equation*}
-  w \frac { \Delta m } { \Delta t } \frac { k } { t } = M \frac { \Delta v } { \Delta t }
+  w \frac { \Delta m } { \Delta t } = M \frac { \Delta v } { \Delta t }
 \end{equation*}
 在$ \Delta t \to 0 $的极限情况，上式成为
 
