--- a/tex/body/M08.03-Collision.tex
+++ b/tex/body/M08.03-Collision.tex
@@ -1,35 +1,35 @@
 \section[碰撞]{\makebox[5em][s]{碰撞}}\label{sec:08.03}
 
 所谓碰撞，包括相当广泛的一类物体间的相互作用过程。处
-碰撞问题，是动量守恒定律最重要的应用之一。
+理碰撞问题，是动量守恒定律最重要的应用之一。
 
 碰撞过程的基本特点如下：在碰撞之前，相碰的物体相距很
-以致它们之间没有相互作用力，每个物体都处在自由运动的
-态，并且保持这科状态不变。当物体相互接近后，它们之间发
-作用，相互作用能够产生各种各样的结果。例如，可能使物体
-合在一起，也可能产生新的物体。在这种作用之后，物体又分离，
-到各自的自由运动状态不变。因此，碰撞所要讨论的是从碰前
-自由状态变到碰后自由状态的过程。显然，对于碰撞的中间过
-，是很难研究的。一方面，碰撞时物体之间的作用很强，要决
-力的具体形式，往往是十分复杂的；另一方面，我们很难直接
-量和记录碰撞时的现象。尤其是在原子实验中，对于电子和质
-相碰，记录它们碰撞时的情况，几乎是不可能的。但对碰撞前
-碰撞后进行测量是比较容易的。所以，在碰撞问题中，我们往
-是根据碰撞前和碰撞后的性质来研究相碰物体之间的相互作用
-性质。即通过碰撞的始末情况，我们能推测相互作用的某些性
-例如，按照碰撞前与碰撞后物体的性质，可以将碰撞分成两
-类：弹性碰撞及非弹性碰撞。所谓弹性碰撞是指碰撞后的物体
-然是原来的物体，而且这些物体的内部状态没有变化。碰撞后
-物体不同于碰撞前的，或者物体虽同但内部状态不同的碰撞都
-于非弹性碰撞。
+远，以致它们之间没有相互作用力，每个物体都处在自由运动的
+状态，并且保持这种状态不变。当物体相互接近后，它们之间发
+生作用，相互作用能够产生各种各样的结果。例如，可能使物体
+结合在一起，也可能产生新的物体。在这种作用之后，物体又分离，
+回到各自的自由运动状态不变。因此，碰撞所要讨论的是从碰前
+的自由状态变到碰后自由状态的过程。显然，对于碰撞的中间过
+程，是很难研究的。一方面，碰撞时物体之间的作用很强，要决
+定力的具体形式，往往是十分复杂的；另一方面，我们很难直接
+测量和记录碰撞时的现象。尤其是在原子实验中，对于电子和质
+子相碰，记录它们碰撞时的情况，几乎是不可能的。但对碰撞前
+和碰撞后进行测量是比较容易的。所以，在碰撞问题中，我们往
+往是根据碰撞前和碰撞后的性质来研究相碰物体之间的相互作用
+的性质。即通过碰撞的始末情况，我们能推测相互作用的某些性
+质。例如，按照碰撞前与碰撞后物体的性质，可以将碰撞分成两
+大类：弹性碰撞及非弹性碰撞。所谓弹性碰撞是指碰撞后的物体
+仍然是原来的物体，而且这些物体的内部状态没有变化。碰撞后
+的物体不同于碰撞前的，或者物体虽同但内部状态不同的碰撞都
+属于非弹性碰撞。
 
 在日常遇到的碰撞现象中，几乎都是不同程度的非弹性的。
-为碰撞往往伴随着使物体变热，即物体的动能部分地转化成
+因为碰撞往往伴随着使物体变热，即物体的动能部分地转化成
 % 236.jpg
 热能，这就改变了物体的内部运动状态。尽管如此，弹性碰撞概
 念在物理中是非常重要的。因为，在原子、核子的碰撞现象中，
 有许多是理想的弹性碰撞。由上述弹性与非弹性的分类原则，可
-以断言：机械能守恒的碰撞，是弹性碰撞3机械能不守恒的碰撞，
+以断言：机械能守恒的碰撞，是弹性碰撞；机械能不守恒的碰撞，
 \begin{wrapfigure}[10]{r}{17em}
   \centering
   \includegraphics{figure/fig08.05}
@@ -64,7 +64,7 @@ $ \vec{ v } _ { 1 } $和$ \vec{ v } _ { 2 } $，碰撞后分别是$ \vec{ v } ' 
 例子再次说明了守恒定律在讨论力学问题时的重要性。当然，如果我们
 想知道
 % 237.jpg
-並撞的细节，则必须弄清作用力的具体情况。
+碰撞的细节，则必须弄清作用力的具体情况。
 
 在加速器的粒子碰撞实验中，靶上的粒子是不动的，因此有
 $ \vec { v } _ { 1 } \ne 0 $，$ \vec { v } _ { 2 } = 0 $。
