--- a/tex/body/M08.04-Center Of Mass Theorem.tex
+++ b/tex/body/M08.04-Center Of Mass Theorem.tex
@@ -4,7 +4,7 @@
 
 我们首先讨论由质量为$ m _ { 1 } , m _ { 2 } $，位置矢量
 为$ \vec { r } _ { 1 } , \vec { r } _ { 2 } $的两个质
-点所构成的孤立体系(图\ref{fig:08.09})这个体系的动量守恒，即
+点所构成的孤立体系(图\ref{fig:08.09})。这个体系的动量守恒，即
 \begin{equation*}
   \frac { \dif \vec { P } } { \dif t } = 0
 \end{equation*}
@@ -16,7 +16,7 @@
     & = \frac { \dif } { \dif t } \left( m _ { 1 } \vec { r } _ { 1 } + m _ { 2 } \vec { r } _ { 2 } \right) \\
     & = \left( m _ { 1 } + m _ { 2 } \right) \frac { \dif } { \dif t } \left( \frac { m _ { 1 } \vec { r } _ { 1 } + m _ { 2 } \vec { r } _ { 2 } } { m _ { 1 } + m _ { 2 } } \right) \\
     & = \left( m _ { 1 } + m _ { 2 } \right) \frac { \dif \vec { r } _ { c } } { \dif t } \\
-    & = \text { 不变量 }
+    & = \text {不变量}
   \end{split}
 \end{equation}
 其中，我们用了一个新的物理量$ \vec { r } _ { c } $，定义为
@@ -86,7 +86,7 @@ $ m _ { 1 } , m _ { 2 } , \cdots , m _ { n } $
 向相反，所以在式\eqref{eqn:08.04.06}中内力全部相互抵消了。
 因此\eqref{eqn:08.04.06}式成为
 \begin{equation*}
-  \frac { \dif \vec { r } _ { c } } { \dif t } = \frac { 1 } { \sum \limits _ { i = 1 } ^ { n } m _ { i } } \left( \vec { F } _ { 1 \text {外} } + \vec { F } _ { 2 \text {外} } + \cdots + \vec { F } _ { n \text {外} } \right)
+  \frac { \dif \vec { v } _ { c } } { \dif t } = \frac { 1 } { \sum \limits _ { i = 1 } ^ { n } m _ { i } } \left( \vec { F } _ { 1 \text {外} } + \vec { F } _ { 2 \text {外} } + \cdots + \vec { F } _ { n \text {外} } \right)
 \end{equation*}
 或
 \begin{equation}\label{eqn:08.04.07}
@@ -111,7 +111,7 @@ $ \vec { F } _ { 1 \text {外} } + \vec { F } _ { 2 \text {外} } + \cdots + \ve
 是普遍适用的。我们常把很大的物体(譬如地球)看为质点，其根
 据正在于此。在考虑地球的某些方面的运动，譬如说绕太阳的整
 体运动，可以把它作为质点来处理。虽然地球内部有各种各样的
-互作用，却可以完全不必顾及，只需考虑外力——太阳引力的
+相互作用，却可以完全不必顾及，只需考虑外力——太阳引力的
 作用就行了。
 
 应当再强调一点，在式\eqref{eqn:08.04.07}中，总质量
