修正第十章中的扫描错误

--- a/tex/body/M10.01-Degrees of Freedom and Degrees of Freedom of Rigid Body.tex
+++ b/tex/body/M10.01-Degrees of Freedom and Degrees of Freedom of Rigid Body.tex
@@ -1,7 +1,7 @@
 \section{自由度及刚体的自由度}\label{sec:10.01}
 
 自由度就是描写体系几何位形所需的独立坐标的数目。譬如，
-对于一个质点的直线运动，只需一个坐标x就完全确定了质点的位
+对于一个质点的直线运动，只需一个坐标$ x $就完全确定了质点的位
 置；对于一个质点的圆周运动，只需一个坐标$ \varphi $来确定质点的位
 置(图\ref{fig:10.01})。因此，这类运动的自由度是1。一般地说，质点
 \begin{wrapfigure}[9]{r}{13em}
@@ -13,7 +13,7 @@
 的一维运动其自由度都是$ 1 $。对于
 一个质点在三维空间中的运动，
 需要三个独立坐标来描写它的位
-置。可以用笛卡尔坐标$ x,y,z $
+置。可以用笛卡尔坐标$ x,y,z $，
 也可以用球极坐标$ r, \theta , \varphi $。因
 此，质点是具有$ 3 $个自由度的物
 理对象。
@@ -27,7 +27,7 @@
 
 例如，由两个质点$ m _ 1, m _ { 2 } $ 构成的体系(图\ref{fig:10.02})，一般要用
 % 286.jpg
-$ 6 $个坐标$ \left( x _ { 1 } , y _ { 1 } , z _ { 1 } \right) ,\left(x_2,y_2,z_2\right) $如果两质点之间的距离是固
+$ 6 $个坐标$ \left( x _ { 1 } , y _ { 1 } , z _ { 1 } \right) ,\left(x_2,y_2,z_2\right) $。如果两质点之间的距离是固
 定的，其长度为$ r $，则上述$ 6 $个坐标之间有一个代数关系：
 \begingroup
 \mathindent=4em
